# ocaml-tsort

./: .gitignore  CHANGES.md  Dockerfile.esy  Makefile  README.md  package.json  tsort.opam
.circleci/: opam-switches  setup
.github/workflows/: main.yml
src/: tsort.ml  tsort.mli
src/lib/: compat.ml  dune  tsort.ml  tsort.mli
src/test/: dune  test_tsort.ml
