opam-version: "2.0"
version: "2.0.0"
maintainer: "daniil@baturin.org"
authors: ["Daniil Baturin <daniil@baturin.org>"]
homepage: "https://github.com/dmbaturin/ocaml-tsort"
bug-reports: "https://github.com/dmbaturin/ocaml-tsort/issues"
dev-repo: "git+https://github.com/dmbaturin/ocaml-tsort.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "containers"
  "dune" {>= "1.9"}
]
synopsis: "Easy to use and user-friendly topological sort"
description: """
Easy to use and user-friendly topological sort.

Example:
```
Tsort.sort [("foundation", []); ("walls", ["foundation"]); ("roof", ["walls"])]
```
"""
